--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^3.0.0",
     "graphql": "^15.5.0",
     "graphql-subscriptions": "^1.2.1",
+    "graphql-ws": "^5.8.2",
     "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
