--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
     "@graphql-tools/schema": "^7.1.5",
     "apollo-server": "^2.24.0",
     "apollo-server-express": "^3.0.0",
+    "apollo3-cache-persist": "^0.14.0",
     "graphql": "^15.5.0",
+    "graphql-anywhere": "^4.2.7",
     "graphql-subscriptions": "^1.2.1",
     "graphql-ws": "^5.8.2",
     "subscriptions-transport-ws": "^0.9.19"
